Use Short#valueOf instead of constructor
- The constructor circumvents the cache for Shorts.
- The constructor is deprecated since Java 9.